fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,6 @@ section {
 
   .border {
     border-bottom: none;
-    border-right: solid rgba(255, 255, 255, 1);
+    border-right: 3px solid rgba(255, 255, 255, .5);
   }
 }
